--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <main class="content">
         <section class="description">
           <div class="two-columns">
-            <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
+            <h4 class="two-columns__brief">Главные проблемы в обучении</h4>
             <div class="two-columns__main-text">
               <p class="two-columns__paragraph">
                 Ни в школе, ни в институте нас не учат тому, как правильно
@@ -40,8 +40,9 @@
                 быстро выветривается и не приносит пользы.
               </p>
               <p class="two-columns__paragraph">
-                <span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где
-                учат. Что с этим делать?
+                <span class="two-columns__span-accent">Вывод:</span> учиться
+                тоже нужно уметь, но почему-то этому мало где учат. Что с этим
+                делать?
               </p>
               <p class="two-columns__paragraph">
                 Конкретные техники и упражнения помогают изменить подход к
@@ -52,7 +53,54 @@
           </div>
         </section>
 
-        <section class="digits"></section>
+        <section class="digits">
+          <h2 class="section-title">Цифры и факты</h2>
+          <h3 class="section-subtitle">Про учебу и мозг</h3>
+          <div class="table">
+            <div class="table__cell">
+              <h4 class="table__heading">86 миллиардов</h4>
+              <p class="table__text">Число нейронов в мозге человека</p>
+            </div>
+            <div class="table__cell">
+              <h4 class="table__heading">2,1 миллиарда</h4>
+              <p class="table__text">
+                Число нуждающихся в повышении квалификации
+              </p>
+              <p class="table__text">Всемирный Банк, 2017</p>
+            </div>
+            <div class="table__cell">
+              <h4 class="table__heading">1000 терабайт</h4>
+              <p class="table__text">Объем памяти человека</p>
+            </div>
+            <div class="table__cell">
+              <h4 class="table__heading">500 триллионов</h4>
+              <p class="table__text">
+                Число ответственных за обучение нервных синапсов у взрослого
+                человека
+              </p>
+            </div>
+            <div class="table__cell">
+              <h4 class="table__heading">420 миллионов</h4>
+              <p class="table__text">
+                Число взрослых людей моложе 25 лет, не имеющих образования для
+                трудоустройства
+              </p>
+              <p class="table__text">Всемирный Банк, 2017</p>
+            </div>
+            <div class="table__cell">
+              <h4 class="table__heading">17-20 лет</h4>
+              <p class="table__text">Пик обучаемости</p>
+            </div>
+            <div class="table__cell">
+              <h4 class="table__heading">1885 год</h4>
+              <p class="table__text">Открытие кривой забывания</p>
+            </div>
+            <div class="table__cell">
+              <h4 class="table__heading">1889 год</h4>
+              <p class="table__text">Открытие условного рефлекса</p>
+            </div>
+          </div>
+        </section>
 
         <section class="feynman"></section>
 
