--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <main class="content">
         <section class="description">
           <div class="two-columns">
-            <h4 class="two-columns__brief">Главные проблемы в обучении</h4>
+            <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
             <div class="two-columns__main-text">
               <p class="two-columns__paragraph">
                 Ни в школе, ни в институте нас не учат тому, как правильно
@@ -102,7 +102,16 @@
           </div>
         </section>
 
-        <section class="feynman"></section>
+        <section class="feynman">
+          <h2 class="feynman__title">Метод Фейнмана</h2>
+          <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+          <a href="#" class="feynman__link">Подробнее →</a>
+          <img
+            src="./images/feynman.png"
+            alt="Изображение Фейнмана"
+            class="feynman__background"
+          />
+        </section>
 
         <section class="kaufman"></section>
       </main>
