kaufman section done

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
         <div class="header__main-illustration"></div>
         <div class="header__square-pic"></div>
       </header>
-
       <main class="content">
         <section class="description">
           <div class="two-columns">
@@ -113,7 +112,57 @@
           />
         </section>
 
-        <section class="kaufman"></section>
+        <section class="kaufman">
+          <h2 class="section-title section-title_theme_dark">
+            Принципы обучения
+          </h2>
+          <h3 class="section-subtitle section-subtitle_theme_dark">
+            От Джоша Кауфмана
+          </h3>
+          <div class="table table_theme_dark">
+            <div class="table__cell table__cell_theme_dark">
+              <h4 class="table__heading table__heading_theme_dark">1</h4>
+              <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h4 class="table__heading table__heading_theme_dark">2</h4>
+              <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h4 class="table__heading table__heading_theme_dark">3</h4>
+              <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h4 class="table__heading table__heading_theme_dark">4</h4>
+              <p class="table__text table__text_theme_dark">Разбейте язык на элементы.</p>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h4 class="table__heading table__heading_theme_dark">5</h4>
+              <p class="table__text table__text_theme_dark">Приготовьте все необходимое для занятий.</p>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h4 class="table__heading table__heading_theme_dark">6</h4>
+              <p class="table__text table__text_theme_dark">Устраните препятствие для занятий.</p>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h4 class="table__heading table__heading_theme_dark">7</h4>
+              <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h4 class="table__heading table__heading_theme_dark">8</h4>
+              <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h4 class="table__heading table__heading_theme_dark">9</h4>
+              <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h4 class="table__heading table__heading_theme_dark">10</h4>
+              <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+            </div>
+          </div>
+          <img src="./images/kaufman-triangle.svg" class="kaufman__triangle" />
+        </section>
       </main>
 
       <footer class="footer"></footer>
