--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
   <body>
     <div class="page">
       <header class="header">
-        <div class="logo logo_place_header">
-          <img src="./images/logo_place_header.svg" alt="Логотип" />
-        </div>
+        <div class="logo logo_place_header"></div>
         <div class="header__title">
           <h1 class="header__title-text">Научиться учиться</h1>
         </div>
@@ -165,7 +163,29 @@
         </section>
       </main>
 
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <div class="footer__columns">
+          <div class="footer__column_content_copyright">
+            <div class="logo logo_place_footer"></div>
+            <div class="footer__author">&copy; Дарья Пирогова</div>
+          </div>
+          <div class="footer__column_content_info">
+            <p class="footer__column-heading">О практикуме</p>
+            <div class="footer__column-links">
+              <a href="#" class="footer__column-link">Главная</a>
+              <a href="#" class="footer__column-link">Концепция</a>
+              <a href="#" class="footer__column-link">Наставники</a>
+            </div>
+          </div>
+          <div class="footer__column_content_social">
+            <p class="footer__column-heading">Соцсети</p>
+            <div class="footer__column-links">
+              <a href="#" class="footer__column-link"><img src="./images/youtube_color_white.svg" alt="Youtube" class="footer__social-icon">Youtube</a>
+              <a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="VK" class="footer__social-icon">Вконтакте</a>
+              <a href="#" class="footer__column-link"><img src="./images/tiktok_color_white.svg" alt="TikTok" class="footer__social-icon">TikTok</a>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
