--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <h2 class="header__subtitle-text">
             Какие современные и эффективные подходы к обучению вы можете
             использовать в своей жизни?
-            <a href="#" class="header__subtitle-link">Узнать →</a>
+            <a href="#0" class="header__subtitle-link">Узнать →</a>
           </h2>
         </div>
         <div class="header__main-illustration"></div>
@@ -102,7 +102,7 @@
         <section class="feynman">
           <h2 class="feynman__title">Метод Фейнмана</h2>
           <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
-          <a href="#" class="feynman__link">Подробнее →</a>
+          <a href="#0" class="feynman__link">Подробнее →</a>
           <img
             src="./images/feynman.png"
             alt="Изображение Фейнмана"
@@ -120,43 +120,63 @@
           <div class="table table_theme_dark">
             <div class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">1</h4>
-              <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+              <p class="table__text table__text_theme_dark">
+                Выберите привлекательный проект.
+              </p>
             </div>
             <div class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">2</h4>
-              <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+              <p class="table__text table__text_theme_dark">
+                Сосредоточьтесь на каком-то одном навыке.
+              </p>
             </div>
             <div class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">3</h4>
-              <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
+              <p class="table__text table__text_theme_dark">
+                Определите целевой уровень мастерства.
+              </p>
             </div>
             <div class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">4</h4>
-              <p class="table__text table__text_theme_dark">Разбейте язык на элементы.</p>
+              <p class="table__text table__text_theme_dark">
+                Разбейте язык на элементы.
+              </p>
             </div>
             <div class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">5</h4>
-              <p class="table__text table__text_theme_dark">Приготовьте все необходимое для занятий.</p>
+              <p class="table__text table__text_theme_dark">
+                Приготовьте все необходимое для занятий.
+              </p>
             </div>
             <div class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">6</h4>
-              <p class="table__text table__text_theme_dark">Устраните препятствие для занятий.</p>
+              <p class="table__text table__text_theme_dark">
+                Устраните препятствие для занятий.
+              </p>
             </div>
             <div class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">7</h4>
-              <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
+              <p class="table__text table__text_theme_dark">
+                Выделите специальное время для занятий.
+              </p>
             </div>
             <div class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">8</h4>
-              <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+              <p class="table__text table__text_theme_dark">
+                Создайте быстрые петли обратной связи.
+              </p>
             </div>
             <div class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">9</h4>
-              <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+              <p class="table__text table__text_theme_dark">
+                Занимайтесь по расписанию, короткими интенсивными интервалами.
+              </p>
             </div>
             <div class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">10</h4>
-              <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+              <p class="table__text table__text_theme_dark">
+                Уделяйте внимание количеству и скорости.
+              </p>
             </div>
           </div>
           <img src="./images/kaufman-triangle.svg" class="kaufman__triangle" />
@@ -167,22 +187,41 @@
         <div class="footer__columns">
           <div class="footer__column_content_copyright">
             <div class="logo logo_place_footer"></div>
-            <div class="footer__author">&copy; Дарья Пирогова</div>
+            <p class="footer__author">&copy; Дарья Пирогова</p>
           </div>
           <div class="footer__column_content_info">
             <p class="footer__column-heading">О практикуме</p>
             <div class="footer__column-links">
-              <a href="#" class="footer__column-link">Главная</a>
-              <a href="#" class="footer__column-link">Концепция</a>
-              <a href="#" class="footer__column-link">Наставники</a>
+              <a href="#0" class="footer__column-link">Главная</a>
+              <a href="#0" class="footer__column-link">Концепция</a>
+              <a href="#0" class="footer__column-link">Наставники</a>
             </div>
           </div>
           <div class="footer__column_content_social">
             <p class="footer__column-heading">Соцсети</p>
             <div class="footer__column-links">
-              <a href="#" class="footer__column-link"><img src="./images/youtube_color_white.svg" alt="Youtube" class="footer__social-icon">Youtube</a>
-              <a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="VK" class="footer__social-icon">Вконтакте</a>
-              <a href="#" class="footer__column-link"><img src="./images/tiktok_color_white.svg" alt="TikTok" class="footer__social-icon">TikTok</a>
+              <a href="#0" class="footer__column-link"
+                ><img
+                  src="./images/youtube_color_white.svg"
+                  alt="Youtube"
+                  class="footer__social-icon"
+                />Youtube</a
+              >
+              <a href="#0" class="footer__column-link"
+                ><img
+                  src="./images/vk_color_white.svg"
+                  alt="VK"
+                  class="footer__social-icon"
+                />Вконтакте</a
+              >
+              <a href="#0" class="footer__column-link"
+                ><img
+                  src="./images/tiktok_color_white.svg"
+                  alt="TikTok"
+                  class="footer__social-icon"
+                />TikTok</a
+              >
+            </div>
           </div>
         </div>
       </footer>
