--- a/index.html
+++ b/index.html
@@ -185,11 +185,11 @@
 
       <footer class="footer">
         <div class="footer__columns">
-          <div class="footer__column_content_copyright">
+          <div class="footer__column footer__column_content_copyright">
             <div class="logo logo_place_footer"></div>
             <p class="footer__author">&copy; Дарья Пирогова</p>
           </div>
-          <div class="footer__column_content_info">
+          <div class="footer__column footer__column_content_info">
             <p class="footer__column-heading">О практикуме</p>
             <div class="footer__column-links">
               <a href="#0" class="footer__column-link">Главная</a>
@@ -197,7 +197,7 @@
               <a href="#0" class="footer__column-link">Наставники</a>
             </div>
           </div>
-          <div class="footer__column_content_social">
+          <div class="footer__column footer__column_content_social">
             <p class="footer__column-heading">Соцсети</p>
             <div class="footer__column-links">
               <a href="#0" class="footer__column-link"
