--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
               </p>
             </div>
           </div>
-          <img src="./images/kaufman-triangle.svg" class="kaufman__triangle" />
+          <div class="kaufman__triangle"></div>
         </section>
       </main>
 
