--- a/index.html
+++ b/index.html
@@ -21,9 +21,34 @@
           </h2>
         </div>
         <div class="header__main-illustration"></div>
-        <div class="header__square-pic rotation"></div>
+        <div class="header__square-pic"></div>
       </header>
       <main class="content">
+        <section class="description">
+          <div class="two-columns">
+            <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+            <div class="two-columns__main-text">
+              <p class="two-columns__paragraph">
+                Ни в школе, ни в институте нас не учат тому, как правильно
+                изучать материал. Мы готовимся к экзаменам и учим билеты. Мы
+                тренируемся решать однообразные задачи, чтобы лучше сдать тест,
+                но часто в итоге это не дает нам реального знания. Зубрежка
+                быстро выветривается и не приносит пользы.
+              </p>
+              <p class="two-columns__paragraph">
+                <span class="two-columns__span-accent">Вывод:</span> учиться
+                тоже нужно уметь, но почему-то этому мало где учат. Что с этим
+                делать?
+              </p>
+              <p class="two-columns__paragraph">
+                Конкретные техники и упражнения помогают изменить подход к
+                обучению, сделать его эффективным и захватывающим. Эти же
+                техники применяются на примере обучения в Практикуме.
+              </p>
+            </div>
+          </div>
+        </section>
+
         <section class="techniques">
           <h2 class="section-title">Техники обучения</h2>
           <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
@@ -91,29 +116,52 @@
           </div>
         </section>
 
-        <section class="description">
+        <section class="video">
+          <h2 class="section-title">Видео на TED</h2>
+          <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
+          <div class="video__iframes">
+            <iframe
+              class="video__iframe"
+              id="ytplayer1"
+              src="https://www.youtube.com/embed/arj7oStGLkU"
+              allowfullscreen
+            ></iframe>
+            <iframe
+              class="video__iframe"
+              id="ytplayer2"
+              src="https://www.youtube.com/embed/5MgBikgcWnY"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </section>
+
+        <section class="oakley">
           <div class="two-columns">
-            <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+            <h2 class="two-columns__brief">История Барбары Оакли</h2>
             <div class="two-columns__main-text">
               <p class="two-columns__paragraph">
-                Ни в школе, ни в институте нас не учат тому, как правильно
-                изучать материал. Мы готовимся к экзаменам и учим билеты. Мы
-                тренируемся решать однообразные задачи, чтобы лучше сдать тест,
-                но часто в итоге это не дает нам реального знания. Зубрежка
-                быстро выветривается и не приносит пользы.
-              </p>
-              <p class="two-columns__paragraph">
-                <span class="two-columns__span-accent">Вывод:</span> учиться
-                тоже нужно уметь, но почему-то этому мало где учат. Что с этим
-                делать?
-              </p>
-              <p class="two-columns__paragraph">
-                Конкретные техники и упражнения помогают изменить подход к
-                обучению, сделать его эффективным и захватывающим. Эти же
-                техники применяются на примере обучения в Практикуме.
+                С детства Барбаре не давалась математика. Она считала себя
+                законченным гуманитарием, причём далеко не самым умным. В армии
+                она изучала русский язык, чтобы получить надбавку, да так
+                успешно, что её выдвинули в командиры. Но для продвижения по
+                службе нужно было сдавать математику. И тогда Барбара придумала
+                свой подход к точным наукам. Оказалось, если вам что-то «плохо
+                даётся», ваши добытые трудом знания гораздо глубже, чем у тех,
+                кому всё ясно с первого взгляда.
               </p>
             </div>
           </div>
+        </section>
+
+        <section class="feynman">
+          <h2 class="feynman__title">Метод Фейнмана</h2>
+          <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+          <a href="#0" class="feynman__link">Подробнее →</a>
+          <img
+            src="./images/feynman.png"
+            alt="Изображение Фейнмана"
+            class="feynman__background"
+          />
         </section>
 
         <section class="digits">
@@ -165,15 +213,28 @@
           </div>
         </section>
 
-        <section class="feynman">
-          <h2 class="feynman__title">Метод Фейнмана</h2>
-          <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
-          <a href="#0" class="feynman__link">Подробнее →</a>
-          <img
-            src="./images/feynman.png"
-            alt="Изображение Фейнмана"
-            class="feynman__background"
-          />
+        <section class="khan">
+          <div class="khan__container">
+            <h2 class="khan__author">Салман Хан</h2>
+            <h3 class="khan__title">Весь мир — школа</h3>
+            <p class="khan__quote">
+              Страсть и новаторство Сала Хана меняют процесс обучения миллионов
+              студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать
+              всем, кто занимается образованием — так учащиеся повсюду смогут
+              получить навыки и знания, которые приносят успех в школе, карьере
+              и жизни.
+            </p>
+            <h4 class="khan__quote-author">Джорд Лукас</h4>
+            <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+            <div class="khan__book-container">
+              <img
+                src="/images/khan-book.jpg"
+                alt="Обложка"
+                class="khan__book-pic"
+              />
+              <a href="#0" class="khan__buy-link">Купить книгу →</a>
+            </div>
+          </div>
         </section>
 
         <section class="kaufman">
@@ -246,6 +307,43 @@
             </div>
           </div>
           <div class="kaufman__triangle"></div>
+        </section>
+
+        <section class="resources">
+          <h2 class="section-title">Полезные ресурсы</h2>
+          <h3 class="section-subtitle">
+            Больше материалов о техниках и лайфхаках обучения
+          </h3>
+          <div class="resources__logo-zone">
+            <a href="#" class="resources__link">
+              <img
+                src="/images/logo/resources-arzamas.svg"
+                alt="Логотип"
+                class="resources__logo"
+              />
+            </a>
+            <a href="#" class="resources__link">
+              <img
+                src="/images/logo/resources-n1.svg"
+                alt="Логотип"
+                class="resources__logo"
+              />
+            </a>
+            <a href="#" class="resources__link">
+              <img
+                src="/images/logo/resources-strelka.svg"
+                alt="Логотип"
+                class="resources__logo"
+              />
+            </a>
+            <a href="#" class="resources__link">
+              <img
+                src="/images/logo/resources-polka.svg"
+                alt="Логотип"
+                class="resources__logo"
+              />
+            </a>
+          </div>
         </section>
       </main>
 
