fix: images display

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
             <div class="khan__book-container">
               <img
-                src="/images/khan-book.jpg"
+                src="./images/khan-book.jpg"
                 alt="Обложка"
                 class="khan__book-pic"
               />
@@ -317,28 +317,28 @@
           <div class="resources__logo-zone">
             <a href="#" class="resources__link">
               <img
-                src="/images/logo/resources-arzamas.svg"
+                src="./images/logo/resources-arzamas.svg"
                 alt="Логотип"
                 class="resources__logo"
               />
             </a>
             <a href="#" class="resources__link">
               <img
-                src="/images/logo/resources-n1.svg"
+                src="./images/logo/resources-n1.svg"
                 alt="Логотип"
                 class="resources__logo"
               />
             </a>
             <a href="#" class="resources__link">
               <img
-                src="/images/logo/resources-strelka.svg"
+                src="./images/logo/resources-strelka.svg"
                 alt="Логотип"
                 class="resources__logo"
               />
             </a>
             <a href="#" class="resources__link">
               <img
-                src="/images/logo/resources-polka.svg"
+                src="./images/logo/resources-polka.svg"
                 alt="Логотип"
                 class="resources__logo"
               />
